# ray-tracing

./: .gitattributes  CMakeLists.txt  README.md  a.txtmake  图形学大作业报告.md
include/sppm/: camera.hpp  config.hpp  hit.hpp  image.hpp  material_read.hpp  ray.hpp  scene.hpp  sppmhit.hpp  utils.hpp
include/sppm/brdf/: material.hpp
include/sppm/objects/: bspline.hpp  color.hpp  group.hpp  light.hpp  mesh.hpp  object.hpp  plane.hpp  sphere.hpp  texture.hpp  triangle.hpp
include/vecmath/: Matrix2f.h  Matrix3f.h  Matrix4f.h  Quat4f.h  Vector2f.h  Vector3f.h  Vector4f.h
resource/: apple2.ppm  hpbook.mtl  hpbook.tga  loli.tga  vase.txt
resource/book_final/: Abetare 1970-1994.fbx  book.ppm
resource/miku/: a.ppm  append.mtl  body01_MikuAp.ppm  body02_MikuAp.ppm  face_MikuAp.ppm  hair_MikuAp.ppm  miku.mtl
resource/realistic-3d-apple/source/: food_apple_01_8k.fbx
src/: bspline.cpp  group.cpp  image.cpp  main.cpp  material_read.cpp  mesh.cpp  scene.cpp
src/vecmath/: Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
