CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.21)
PROJECT(PROJ CXX)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

aux_source_directory(src/ PROJ_SOURCES)
aux_source_directory(src/vecmath/ PROJ_SOURCES)
aux_source_directory(include/ PROJ_INCLUDES)
aux_source_directory(include/vecmath/ PROJ_INCLUDES)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(CMAKE_CXX_FLAGS "-fopenmp -O3 -Wl,--stack=1024000000")

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lwinpthread -lgomp")

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_INCLUDES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include/vecmath)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include/sppm)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include/sppm/objects)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include/sppm/brdf)
